--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
+	}
+}
 plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
 
-group = 'com.aastha'
-version = '0.0.1-SNAPSHOT'
+group = 'com.github.aasthalife'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 repositories {
@@ -31,3 +39,4 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+apply plugin: "com.vanniktech.maven.publish"
